projects/vb6parse/snapshots/parsers/cst/declarations/arrays/redim_with_comment.snap
---
source: projects/vb6parse/tests/declarations/arrays.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ReDimStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ReDimKeyword
                  text: ReDim
                - kind: Whitespace
                  text: " "
                - kind: PreserveKeyword
                  text: Preserve
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: fileNameArray
                - kind: LeftParenthesis
                  text: (
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: rdIconMaximum
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Whitespace
                  text: " "
                - kind: EndOfLineComment
                  text: "' the file location of the original icons"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
